--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf build/ && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:dev": "rm -rf build/ && npm run build && aws s3 sync build/ s3://safelux-dev/"
   },
   "eslintConfig": {
     "extends": [
