--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
+    "use-debounce": "^5.1.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3",
     "zxcvbn": "^4.4.2"
